2015-03-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 34723: configure.ac: turn off fixed site function directory if
	site function directory explicitly disabled.

2015-03-17  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: NEWS: rewrite the foregoing.

2015-03-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 34725: NEWS: note thhat common site function directory
	may be overridden by configuration.

	* 34721: Doc/Zsh/calsys.yo, Functions/Calendar/after,
	Functions/Calendar/before: new glob qualifier functions.

2015-03-16  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34671 plus tweaks: Completion/Base/Utility/_describe
	Completion/Unix/Command/_git Doc/Zsh/compsys.yo: Add -1 -2 -J -V
	-x to _describe, use them to sort 'git --fixup' hash completions

	* 34671: Completion/Unix/Command/_git: git completion: only
	offer recent commits' tags/heads for --fixup

2015-03-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 34712: Doc/Zsh/grammar.yo: clarify words that may be aliased

2015-03-15  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Completion/Zsh/Command/_zattr: Fix completion of
	attributes for files with pattern characters.

2015-03-10  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19985: Doc/Zsh/params.yo: improve doc of substring
	subscripting further.

2015-03-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34673: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Fix error message when rebase hasn't started

	* 34693: Completion/Unix/Command/_sudo: sudo completion: Don't
	false positive 'sudo -e' detection

	* 34693: Completion/Linux/Command/_strace: _strace: Fix variable
	leakage of $sys_calls

2015-03-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* Daniel Hahler: 34638 with tweaks: Completion/Unix/Command/_git:
	git completion: complete commit hashes and --fixup

2015-03-05  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34643: Doc/Zsh/builtins.yo, Doc/Zsh/zle.yo: clarify which